chore 1.修改自定义打包路径 2.统一所有文本组件以实现玩家始终能收到与玩家语言匹配的消息提示
(cherry picked from commit 8ee4a7201d0687461bd4a3583370311f963b6aa7)